--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "todo-list-with-tomatoes",
+  "name": "todo-list-with-tomato",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
